feat: adiciona lancamentos financeiros e configuracao do fintech
