# backend/src/routes/index.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { authRoutes } from './authRoutes';
 import { userRoutes } from './userRoutes';
+import { financialEntryRoutes } from './financialEntryRoutes';
 
 const router = Router();
 
@@ -8,5 +9,6 @@ router.use('/auth', authRoutes);
 
 // Registra as rotas de usuários sob o prefixo /users
 router.use('/users', userRoutes);
+router.use('/lancamentos', financialEntryRoutes);
 
 export { router as appRoutes };
